resubmit with double memory in case of failure

--- a/busco_nf.config
+++ b/busco_nf.config
@@ -23,8 +23,10 @@ profiles {
         	queue = 'small'
         	memory = '1GB'
         	withName: busco {
+                errorStrategy = 'retry'
+                maxErrors 3
                 queue = 'normal'
-                memory = '20 GB'
+                memory { 20.GB * task.attempt }
 
             }
         }
