--- a/busco_nf.config
+++ b/busco_nf.config
@@ -24,7 +24,7 @@ profiles {
         	memory = '1GB'
         	withName: busco {
                 errorStrategy = 'retry'
-                maxErrors 3
+                maxErrors = 3
                 queue = 'normal'
                 memory { 20.GB * task.attempt }
 
