working busco config

--- a/busco_nf.config
+++ b/busco_nf.config
@@ -24,9 +24,9 @@ profiles {
         	memory = '1GB'
         	withName: busco {
                 errorStrategy = 'retry'
-                maxErrors = 3
+                maxRetries = 3
                 queue = 'normal'
-                memory { 20.GB * task.attempt }
+                memory = { 20.GB * task.attempt }
 
             }
         }
