--- a/busco_nf.config
+++ b/busco_nf.config
@@ -14,6 +14,8 @@ profiles {
 
     standard {
         process.executor = 'local'
+        time = '16h'
+        errorStrategy = 'ignore'
     }
 
     farm {
