Conditional error for choosing queue
If fails, it's sent to the long queue

--- a/busco_nf.config
+++ b/busco_nf.config
@@ -22,13 +22,13 @@ profiles {
         process.executor = 'lsf'
         executor.perJobMemLimit = true
         process {
-        	queue = 'small'
-        	memory = '1GB'
-        	withName: busco {
-                errorStrategy = 'retry'
-                maxRetries = 3
-                queue = 'normal'
-                memory = { 20.GB * task.attempt }
+                queue = 'small'
+                memory = '1GB'
+                withName: busco {
+                errorStrategy = { task.attempt == 1 ? 'retry' : 'ignore'}
+                maxRetries = 2
+                queue = { task.attempt > 1 ? 'long' : 'normal' }
+                memory = '5.GB'
 
             }
         }
