specify per job memory for farm usage

--- a/reads2filterdAssembly.conf
+++ b/reads2filterdAssembly.conf
@@ -1,14 +1,17 @@
 singularity.enabled = true
 singularity.autoMounts = true
+executor.perJobMemLimit = true
 condaEnv="/lustre/scratch116/tol/projects/tol-nemotodes/sw/miniconda3/envs/btk_env"
+kmerContainer="/lustre/scratch116/tol/projects/tol-nemotodes/sw/.singularity/genokmer_0.1.sif"
 
 process{
+    memory = '1 GB'
     withLabel: big_parallelizable {
         cpus = 12
    		memory = '6 GB'
 	}
     withLabel: kmer {
-        container = "$HOME/genokmer_0.1.sif"
+        container = "$kmerContainer"
 	}
     withLabel: btk {
         conda = "$condaEnv"
