--- a/busco2phylo.config
+++ b/busco2phylo.config
@@ -1,32 +1,39 @@
 executor.perJobMemLimit = true
-condaEnv="$HOME/miniconda3/envs/orthology_env/"
+condaEnv="/nfs/users/nfs_p/pg17/.conda/envs/orthology_env"
 
 profiles {
 
     farm {
+	executor {
+		name = 'lsf'
+		queueSize = 3000
+		pollInterval = '1 min'
+                }
 	process {
-		executor = 'lsf'
 		memory = '5GB'
 		queue = 'normal'
 		cpus = 1
 
 		withName: 'align_fastas|trim_alignments' {
+		errorStrategy = 'ignore'
                 conda = "$condaEnv"
-				queue = 'small'
-                memory = '500.MB'
-            }
+                memory = '1GB'
+
+            	}
 		
 		withName: infer_gene_trees {
-                conda = "$condaEnv"
-				cpus = 2
-            }
+                	conda = "$condaEnv"
+			errorStrategy = 'ignore'
+			cpus = 12
+			queue = 'long'
+            	}
 		
 		withName: 'infer_supermatrix_tree|estimate_astral_BLs' {
                 conda = "$condaEnv"
-				queue = 'long'
-				cpus = 16
-            }
-		}
+				queue = 'basement'
+				cpus = 10
+            	}
 	}
+}
 
 }
