--- a/busco_nf.config
+++ b/busco_nf.config
@@ -5,7 +5,7 @@ executor.perJobMemLimit = true
 process{
     container = "$HOME/busco_v4.1.2_cv1.sif"
 	withName: busco {
-    	cpus = 8
+    	cpus = 12
 	}
 }
 
@@ -27,8 +27,8 @@ profiles {
                 withName: busco {
                 errorStrategy = { task.attempt == 1 ? 'retry' : 'ignore'}
                 maxRetries = 2
-                queue = { task.attempt > 1 ? 'long' : 'normal' }
-                memory = '5.GB'
+                queue = { task.attempt > 1 ? 'basement' : 'normal' }
+                memory = '22.GB'
 
             }
         }
