minor naming changes

--- a/qc_assem.conf
+++ b/qc_assem.conf
@@ -2,7 +2,7 @@ singularity.enabled = true
 singularity.autoMounts = true
 executor.perJobMemLimit = true
 condaEnv="/lustre/scratch123/tol/teams/blaxter/projects/tol-nemotodes/sw/miniconda3/envs/nemaChromQC"
-buscoContainer="$HOME/busco_v4.1.2_cv1.sif"
+buscoContainer="$HOME/busco_v5.0.0_cv1.sif"
 
 process{
     memory = '3 GB'
@@ -14,7 +14,7 @@ process{
     withName: nematode_chromosome_QC {
     	errorStrategy = "ignore"
 	}
-    withLabel: btk {
+    withLabel: nemaQC {
         conda = "$condaEnv"
 	}
 }
