--- a/reads2filterdAssembly.conf
+++ b/reads2filterdAssembly.conf
@@ -1,20 +1,47 @@
 singularity.enabled = true
 singularity.autoMounts = true
 executor.perJobMemLimit = true
-condaEnv="/lustre/scratch116/tol/projects/tol-nemotodes/sw/miniconda3/envs/btk_env"
+condaEnv="/lustre/scratch123/tol/teams/blaxter/projects/tol-nemotodes/sw/miniconda3/envs/btk_env"
+rCondaEnv="/lustre/scratch123/tol/teams/blaxter/projects/tol-nemotodes/sw/miniconda3/envs/nemaChromQC"
 kmerContainer="/lustre/scratch116/tol/projects/tol-nemotodes/sw/.singularity/genokmer_0.1.sif"
+buscoContainer="/nfs/users/nfs_p/pg17/busco_v4.1.2_cv1.sif"
 
 process{
-    memory = '1 GB'
+    memory = '3 GB'
     withLabel: big_parallelizable {
+        errorStrategy = { task.attempt == 1 ? 'retry' : 'ignore'}
+        maxRetries = 2
+        queue = { task.attempt > 1 ? 'long' : 'normal' }
+	}
+    withName: map_reads {
+   	    cpus = 24
+   	    memory = '20 GB'
+	}
+    withName: 'kmer_hist|kat_plot' {
+   	    cpus = 10
+   	    memory = '25 GB'
+	}
+    withName: diamond_search {
+   	    cpus = 8
+   	    memory = '10 GB'
+	}
+    withName: hifiasm {
+   	    cpus = 18
+   	    memory = '40 GB'
+	}
+    withName: busco {
+   	    container = "$buscoContainer"
         cpus = 12
-   		memory = '6 GB'
+   	    memory = '25 GB'
 	}
     withLabel: kmer {
         container = "$kmerContainer"
 	}
     withLabel: btk {
         conda = "$condaEnv"
+	}
+    withLabel: r {
+        conda = "$rCondaEnv"
 	}
 }
 
