update new conda location

--- a/busco2phylo.config
+++ b/busco2phylo.config
@@ -1,5 +1,5 @@
 executor.perJobMemLimit = true
-condaEnv="/nfs/users/nfs_p/pg17/.conda/envs/orthology_env"
+condaEnv="/lustre/scratch123/tol/teams/blaxter/projects/tol-nemotodes/sw/miniconda3/envs/orthology_env"
 
 profiles {
 
