update containe path

--- a/busco_nf.config
+++ b/busco_nf.config
@@ -3,9 +3,9 @@ singularity.autoMounts = true
 executor.perJobMemLimit = true
 
 process{
-    container = "$HOME/busco_v4.1.2_cv1.sif"
 	withName: busco {
-    	cpus = 12
+    	cpus = 8
+        container = "/software/team301/images/busco_v5.1.3_cv1.sif"
 	}
 }
 
@@ -22,14 +22,11 @@ profiles {
         process.executor = 'lsf'
         executor.perJobMemLimit = true
         process {
-                queue = 'small'
-                memory = '1GB'
                 withName: busco {
                 errorStrategy = { task.attempt == 1 ? 'retry' : 'ignore'}
                 maxRetries = 2
                 queue = { task.attempt > 1 ? 'basement' : 'normal' }
                 memory = '22.GB'
-
             }
         }
     }
