added BUSCO, worked in miniDF5120

--- a/minimal_blobtoolkit.config
+++ b/minimal_blobtoolkit.config
@@ -1,13 +1,7 @@
+singularity.enabled = true
+singularity.runOptions = "-B /lustre/:/lustre/"
 executor.perJobMemLimit = true
-condaEnv="/lustre/scratch116/tol/projects/tol-nemotodes/sw/miniconda3/envs/btk_env"
-
-
-process {
-    conda = "$condaEnv"
-	withName: 'map_reads|diamond_search' {
-		cpus = 8
-    }
-}
+btkContainer="/software/team301/images/blobtoolkit_1.3.4.sif"
 
 profiles {
 
@@ -17,6 +11,28 @@ profiles {
             memory = '5GB'
             queue = 'normal'
             cpus = 1
+            withLabel: 'btk' {
+                container = "$btkContainer"
+            }
+            withName: 'diamond_search' {
+                cpus = 8
+                memory = '30GB'
+		        queue = 'long'
+            }
+            withName: 'map_reads' {
+                cpus = 12
+                memory = '25GB'
+                errorStrategy = "ignore"
+            }
+            withName: 'busco' {
+                cpus = 8
+                memory = '14GB'
+                errorStrategy = "ignore"
+            }
+            withName: add_hits_and_coverage {
+                errorStrategy = "ignore"
+            }
         }
     }
 }
+
